--- a/nginx.conf
+++ b/nginx.conf
@@ -128,7 +128,7 @@ http {
   # a specific directory, or on an individual server{} level.
   # gzip_static on;
   
-  proxy_cache_path /tmp/nginx levels=1:2 keys_zone=cache:2g inactive=60m;
+  proxy_cache_path /tmp/nginx levels=1:2 keys_zone=cache:100m inactive=60m;
   proxy_cache_key "$scheme$request_method$host$request_uri";
   
   include conf.d/*;
