--- a/nginx.conf
+++ b/nginx.conf
@@ -13,9 +13,12 @@ events {
 http {
 
     server_names_hash_bucket_size 64;
+    
     proxy_buffering    off;
     proxy_buffer_size  128k;
     proxy_buffers 100  128k;
+
+    client_max_body_size 5G;
 
     # HTTP 1.1 support
     proxy_http_version 1.1;
@@ -55,35 +58,6 @@ http {
         listen 80 default_server;
         server_name _; # This is just an invalid value which will never trigger on a real hostname.
         return 503;
-    }
-
-    # Basic reverse proxy server
-    upstream backend  {
-        server 127.0.0.1:4433;
-    }
-
-     # *:80 -> 127.0.0.1:4433
-    server {
-        listen       80;
-        server_name  example.com;
-
-        ## send all traffic to the back-end
-        location / {
-
-            proxy_pass        http://backend;
-            proxy_redirect    off;
-            proxy_set_header  X-Forwarded-For $remote_addr;
-
-            location ~* \.(html|css|jpg|gif|ico|js|jpeg|png|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc|zip|bz2)$ {
-                proxy_cache          cache;
-                proxy_cache_key      $host$uri$is_args$args;
-                proxy_cache_valid    200 301 302 30m;
-                proxy_cache_bypass  $http_cache_control;
-                add_header X-Proxy-Cache $upstream_cache_status;
-                expires              30m;
-                proxy_pass  http://backend;
-            }
-        }
     }
 
     include /etc/nginx/conf.d/*.conf;
